*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.10.0@9978 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -406,6 +406,7 @@ module.FriendlyPool.desc=Bereits besuchte Länder in der Freundschaftsspielauswa
 module.TransferHistoryFilters.desc=Fügt Filteroptionen zur Transferhistorie deines Vereins hinzu
 
 #htevprediction
+module.HTEVPrediction.desc=Wahrscheinlichkeitsvorhersagen des Spielausgangs für Ligaspiele von HTEV.org abfragen und als ToolTip anzeigen. (In Zusammenarbeit mit furr_, dem Entwickler von HTEV)
 # -----------------------------------------------------------------------------
 
 
