--- a/content/locale/pt-BR/foxtrick.properties
+++ b/content/locale/pt-BR/foxtrick.properties
@@ -52,6 +52,8 @@ module.HTDateFormat.LocalSeason.desc=Mostrar temporada local no lugar da tempora
 module.StaffMarker.desc=Realça os nicks de membros do staff nos fóruns.
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Mostrar a barra de link para a Escola de Juniores (Também funciona com nos editores de HT-Mails, comunicados de imprensa e mensagens no livro de visitas)
+module.ForumYouthIcons.user_id.desc=Adiciona o ícone para a ID de usuário
+module.ForumYouthIcons.kit_id.desc=Adiciona o ícone para ID de Uniforme
 module.ForumYouthIcons.article_id.desc=Adiciona um ícone para a ID de um artigo
 module.ForumYouthIcons.enlarge_input.desc=Amplia a caixa de texto para escrever melhor
 #FormatPostingText
@@ -121,7 +123,7 @@ module.PersonalityImages.desc=Adicionar numeros coloridos para popularidade, hon
 module.HideSignatures.desc=Esconder as assinaturas nos foruns, e em alternativa mostrar um link para as mesmas
 module.ForumNextAndPrevious.desc=Remover os botoes 'Proximo' e 'Anterior' dos foruns, se estes estiverem desabilitados
 module.MatchPlayerColouring.desc=Cores dos jogadores em funçao da sua equipa no relatorio de jogo.
-module.HTThreadMarker.desc=Marcar Topicos criados por HTs
+module.HTThreadMarker.desc=Marcar Tópicos criados por HTs
 module.TeamStats.General.desc=Informações gerais (TSI/idade)
 module.TeamStats.Speciality.desc=Especialidades
 module.TeamStats.Personality.desc=Personalidade
@@ -196,6 +198,7 @@ module.LeagueNewsFilter.lineup_changes.desc=Mostrar apenas mudanças na escalaç
 module.MoveManagerOnline.desc=Move os usuários online para o topo na página da região. Cuidado\! Isso fica muito lento se a quantidade de jogadores online estiver acima de 100.
 module.TeamPopupLinks.desc=Mostra uma pequena janela pop-up com varios links quando passar o cursor por cima de um link para uma equipe
 module.TeamPopupLinks.TeamHighlight.desc=Destaca o time atual nas tabelas
+module.TeamPopupLinks.TeamLinks.desc=Adicionar pop-ups para links de equipe
 module.TeamPopupLinks.Matches.desc=Partidas
 module.TeamPopupLinks.Players.desc=Jogadores
 module.TeamPopupLinks.last_5_ips.desc=Últimos 5 logins
@@ -220,6 +223,7 @@ module.YouthSkillHideUnknown.HideUnknown.desc=Ocultar habilidades desconhecidas
 module.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Ocultar a palavra "máximo" para obter mais espaço
 module.SkillTable.desc=Mostrar as habilidades dos jogadores como uma tabela.
 module.SkillTable.OtherTeams.desc=Habilitar para outros times
+module.SkillTable.ColouredYouth.desc=Mostrar habilidades de juniors colorida
 #HighlightCupwins
 module.HighlightCupwins.desc=Destacar equipes vencedoras na página de jogos da Copa
 module.HighlightCupwins.HighlightCupsets.desc=Destacar 'Zebras da Copa' (partidas ganhas pela equipe de ranking inferior)
@@ -377,7 +381,7 @@ HistoryStats.cupwinner=Vencedor da copa
 
 # YouthPromotes
 #following string uses pluralForms
-YouthPromotes.future=Jogador pode ser promovido após %1 dias, em %2.;Jogador pode ser promovido após %1 dias, em %2.
+YouthPromotes.future=Jogador pode ser promovido após %1 dia, em %2.;Jogador pode ser promovido após %1 dias, em %2.
 YouthPromotes.today=Jogador pode ser promovido hoje\!
 
 #teamstats+filters
@@ -436,7 +440,7 @@ LeagueNewsFilter.lineupChanges=Mudanças na formação
 #team pages
 sidebarBox.actions=Ações
 TeamSelectBox.selectplayer=Selecionar jogador
-ExtendedPlayerDetails.perseason=/ season
+ExtendedPlayerDetails.perseason=/temporada
 ExtraPlayerInfo.defensiveTrainer=Um técnico de qualidade %s que é defensivo.
 ExtraPlayerInfo.offensiveTrainer=Um técnico de qualidade %s que é ofensivo.
 ExtraPlayerInfo.balancedTrainer=Um técnico de qualidade %s que é equilibrado.
@@ -469,7 +473,7 @@ ForumTemplates.templateTitle.error='[' e ']' não é permitido como titulo
 ForumTemplates.delete.ask=Apagar template?
 
 #ForumPreview
-ForumPreview.preview.title=Mostrar uma previa do post
+ForumPreview.preview.title=Mostrar uma prévia do post
 ForumPreview.preview=Visualizar
 ForumPreview.send=Enviar
 
@@ -479,7 +483,7 @@ ForumYouthIcons.toolbar.youth=Links Juniors
 ForumYouthIcons.toolbar.tournament=Torneios
 ForumYouthIcons.toolbar.other=Outros
 ForumYouthIcons.youthplayerid=Link para jogador junior
-ForumYouthIcons.youthteamid=Link para Time de juniors
+ForumYouthIcons.youthteamid=Link para Time de juniores.
 ForumYouthIcons.youthmatchid=Adicionar link para jogo dos juniores
 ForumYouthIcons.youthseries=Adicionar link para grupo dos juniores
 ForumYouthIcons.tournamentid=Inserir link para um torneio.
@@ -588,18 +592,26 @@ PlayerCategory.abbr=Ca
 #note to translators. Copy abbreviations from HT translations using players page on HT (only supporters can see them in brackets next to players names)
 categories.GK=GO
 categories.CD=ZC
+categories.W=AL
 categories.IM=MC
+categories.FW=AT
 categories.E1=E1
 categories.E2=E2
 
 #match positions
 match.pos.kp=Goleiro
+match.pos.kp.abbr=GO
 match.pos.lb=Lateral-esquerdo
+match.pos.lb.abbr=LE
 match.pos.lcd=Zagueiro central esquerdo
+match.pos.lcd.abbr=ZCE
 match.pos.mcd=Zagueiro central
 match.pos.rcd=Zagueiro central direito
+match.pos.rcd.abbr=ZCD
 match.pos.rb=Lateral-direito
+match.pos.rb.abbr=LD
 match.pos.lw=Ala esquerdo
+match.pos.lw.abbr=AE
 match.pos.lcm=Meia central esquerdo
 match.pos.mcm=Meio campo central
 match.pos.rcm=Meia central direito
@@ -703,7 +715,7 @@ CurrentSquad=Elenco atual
 Nationality=Nacionalidade
 Nationality.abbr=Nac
 Flag=Bandeira
-Flag.abbr=Bandeira
+Flag.abbr=Band.
 Player=Jogador
 Player.abbr=Jogador
 Age=Idade
@@ -711,13 +723,14 @@ Age.abbr=Idade
 Match=Partida
 Series=Grupos
 TransferCompare=Comparação de mercado
+TransferCompare.abbr=CM
 Bookmark=Favoritos
 Bookmark.abbr=Fav
 Deadline=Prazo final
 Deadline.abbr=Prazo final
 CurrentBid=Lance atual
 CurrentBid.abbr=Lance
-CurrentBidder=Ofertante com maior lance atual
+CurrentBidder=Comprador com maior lance atual
 CurrentBidder.abbr=Comprador
 CurrentBidderShort=Comprador com maior lance atual
 
@@ -745,7 +758,7 @@ links.custom.tags=Tags
 links.custom.help=Ajuda
 
 #following string uses pluralForms
-notify.newMail=Você recebeu %s novas mensagens.;Você recebeu %s novos e-mails.
+notify.newMail=Você recebeu %s nova mensagem.;Você recebeu %s novas mensagens.
 #following string uses pluralForms
 notify.newForumMessage=Temos %s nova resposta no fórum para você., Temos %s novas respostas no fórum para você.
 
@@ -908,6 +921,7 @@ MyMonitor.remove=Remover esse time do monitor
 MyMonitor.addHelp=Vá para a equipe que você deseja monitorar, e você poderá ver uma caixa na barra lateral para adicionar a equipe.
 MyMonitor.removeTeam=Selecione um time para remover\:
 # %n, %t and %i will be replaced by team name, type and ID respectively
+MyMonitor.removeTeamFormat=%n(%t,\#%i)
 MyMonitor.type.senior=Principal
 MyMonitor.type.youth=Junior
 MyMonitor.type.nt=Nacional
@@ -1026,6 +1040,7 @@ prefs.view.by.category=Exibir por categoria
 prefs.view.by.page=Exibir pela última página HT
 
 module.screenshot=Screenshot
+module.link=Você pode copiar e colar este link para o fórum diretamente aqui
 
 # tabs in preferences page
 #tabs
@@ -1042,6 +1057,7 @@ tab.alert=Alerta
 tab.about=Sobre
 tab.changes=Changes
 tab.help=Help
+tab.accessibility=Acessibilidade
 
 prefs.setup=Instalação
 prefs.setup.desc=Estas são as configurações que o Foxtrick detectou, se estiverem incorretas {Favor reportar}.
@@ -1056,8 +1072,8 @@ prefs.storedData.oauth.delete.desc=Aplica-se somente para este navegador. Para r
 prefs.storedData.disableAll=Desabilitar todos os módulos
 prefs.storedData.revokePermissions=Revogar todas as permissões opcionais (somente Chrome)
 
-prefs.disable.title=Disabilitar Foxtrick
-prefs.disable.temporary=Disabilitar Foxtrick temporaramente
+prefs.disable.title=Desabilitar Foxtrick
+prefs.disable.temporary=Desabilitar Foxtrick temporariamente
 prefs.disable.stage=Desabilitar Foxtrick no servidor do Stage
 
 prefs.loadSave.title=Exportar ou importar preferências
@@ -1081,11 +1097,16 @@ link.homepage=Página Inicial
 link.bugTracker=Reportar um problema
 link.hattrickForum=Fórum do FoxTrick no Hattrick
 link.screenshots=Imagens de tela
+link.nightlyFirefox=Desenvolvido para o Firefox
+link.nightlyChrome=Desenvolvido para o Google Chrome
+link.nightlyOpera=Desenvolvido para o Opera
+link.nightlySafari=Desenvolvido para o Safari
 link.recentChanges=Alterações recentes
 
 releaseNotes.show=Mostrar notas de versão após cada atualização
 releaseNotes.showFor=Mostrar notas de lançamento para\:
 releaseNotes.version=Versão\:
+releaseNotes.translationStatus=Seu idioma esta %s% traduzido.
 
 about.copyright=Copyright
 about.maintainers=Mantenedores
