--- a/content/locale/cs/foxtrick.properties
+++ b/content/locale/cs/foxtrick.properties
@@ -1,5 +1,7 @@
 #X-Generator: crowdin.net
 #used by translators to keep track. not used with foxtrick atm
+properties.language=ENGLISH MASTER
+properties.version=HEAD
 properties.translators=Vývojáři
 
 # Hints:
@@ -87,12 +89,14 @@ module.EmbedMedia.EmbedYoutubeVideos.desc=Vkládat videa z YouTube
 module.EmbedMedia.EmbedVimeoVideos.desc=Vkládat videa z Vimeo
 module.EmbedMedia.EmbedFunnyOrDieVideos.desc=Vkládat videa z FunnyOrDie
 module.EmbedMedia.EmbedDailymotionVideos.desc=Vkládat videa z Dailymotion
+module.EmbedMedia.EmbedModeOEmebed.desc=Použij oEmbed pro vkládání médií (jen pro Firefox a Chrome)
 module.EmbedMedia.ReplaceLinksByTitles.desc=Nahradit text odkazu štítkem s typem média, např. názvem obrázku
 module.EmbedMedia.EmbedSoundCloud.desc=Vkládat Soundcloud
 module.EmbedMedia.EmbedFlickrImages.desc=Vkládat obrázky ze serveru Flickr
 module.EmbedMedia.EmbedDeviantArtImages.desc=Vkládat obrázky ze serveru Deviantart
 module.EmbedMedia.EmbedGenericImages.desc=Vkládat obrázek, pokud na něj odkaz odkazuje
 module.EmbedMedia.EmbedGenericImagesClever.desc=Pokusit se uhádnout správnou adresu obrázku i v případě, že původní odkaz na první pohled nevypadá, že směřuje na obrázek.
+module.EmbedMedia.EmbedImageshack.desc=Rozšířená podpora ImageShack (jen pro Firefox a Chrome)
 #Forum direct page links
 module.DirectPageLinks.desc=Přidává odkazy, pomocí kterých lze přejít přímo na určitou stránku vlákna.
 #
@@ -125,6 +129,7 @@ module.LinksAchievements.desc=Na stránku úspěchů přidává externí odkazy.
 module.LinksStaff.desc=Na stránku zaměstnanců přidává externí odkazy.
 module.LinksTracker.desc=Na příslušné stránky národních týmů a reprezentačních hráčů přidává externí odkazy na trackery
 module.LinksClubTransfers.desc=Na stránku týmové historie přestupů přidává externí odkazy
+module.LinksWorld.desc=Přidává externí odkazy na stránku "Svět"
 module.LoyaltyDisplay.desc=Zvýraznit vliv oddanosti a odchovaneckého bonusu na stránce hráče (funguje jen v případě, že na HT nastavíte zobrazení dovedností graficky)
 module.ForumAlterHeaderLine.desc=Upravuje záhlaví příspěvku.
 module.Singleline2.desc=Alternativní modul jednořádkového záhlaví konferenčních příspěvků, který je o něco rychlejší, než jiné verze. Vypne některé konfliktní moduly upravující konferenční příspěvky.
@@ -162,6 +167,7 @@ module.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Odstranit obarvení vla
 module.MatchReportFormat.desc=Zobrazení hlášení ze zápasu po řádcích dle jednotlivých událostí.
 module.MatchReportFormat.ShowEventIcons.desc=Přidat ikony k jednotlivým událostem
 module.MatchReportFormat.SeparateOwnTeamColors.desc=Odstranit obarvení vlastního týmu
+module.LiveMatchReportFormat.desc=Zobrazuje hlášky v HT-Live a HT Re-Live po řádcích podle zápasových událostí s rozlišujícími ikonami.
 module.ForumRedirManagerToTeam.desc=Odkazy na konferenci vedoucí na stránku manažera přesměrovává na stránku týmu.
 module.ManagerButtons.desc=Přidává nebo mění tlačítka na stránce manažera a týmu.
 module.ManagerButtons.GuestBook.desc=na stránku manažera a týmu přidává odkaz na návštěvní knihu
@@ -253,7 +259,9 @@ module.ContextMenuCopy.HtMl.desc=Možnost zkopírovat vybraný obsah v HT-ML for
 module.ContextMenuCopy.Table.desc=Možnost zkopírovat tabulku v HT-ML formátu
 module.NewMail.desc=Zobrazuje počítadlo nové pošty a tobě adresovaných příspěvků na konferenci.
 module.NewMail.NotifyMail.desc=Zobrazovat upozornění, když dostaneš novou zprávu
+module.NewMail.NotifyMailSound.desc=Přehrát zvuk při obdržení nové zprávy
 module.NewMail.NotifyForum.desc=Zobrazovat upozornění, pokud se na konferenci objeví odpověď na tvůj příspěvek
+module.NewMail.NotifyForumSound.desc=Přehraj zvuk při nové reakci na příspěvek na konferenci
 module.CopyYouth.desc=Kopírovací funkce pro hlášení a zdrojové kódy na stránkách dorostu
 module.CopyYouth.TrainingReport.desc=Hlášení o tréninku
 module.CopyYouth.ScoutComment.desc=Skautův komentář
@@ -270,6 +278,7 @@ module.LeagueNewsFilter.lineup_changes.desc=Zobrazovat jen informace o změnách
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Na stránce regionu přesouvá manažery, kteří jsou připojeni, nahoru. Upozornění\: Pokud počet připojených manažerů přesáhne hodnotu 100, systém může být velice pomalý.
 module.TeamPopupLinks.desc=Při najetí na odkaz na tým zobrazuje malé plovoucí okno s odkazy.
+module.TeamPopupLinks.TeamHighlight.desc=Zvýraznit současný tým v tabulkách
 module.TeamPopupLinks.TeamLinks.desc=Zapnout plovoucí nabídku u odkazů na tým
 module.TeamPopupLinks.UserLinks.desc=Zapnout plovoucí nabídku u odkazů na uživatele
 module.TeamPopupLinks.Manager.desc=Manažer (jen při odkazech vedoucích na tým)
@@ -287,7 +296,9 @@ module.TeamPopupLinks.LastLineup.desc=Poslední sestava
 module.TeamPopupLinks.NextMatch.desc=Další zápas
 module.TeamPopupLinks.AddNextMatch.desc=Přidat další zápas do HT-Live
 module.TeamPopupLinks.YouthMatches.desc=Zápasy dorostenecké akademie
+module.TeamPopupLinks.Tournaments.desc=Turnaje
 module.TeamPopupLinks.Coach.desc=Trenér
+module.TeamPopupLinks.CustomLink.desc=Vlastní odkazy na jednotlivých řádcích. Tagy [UserID] a [TeamID] budou nahrazeny skutečnými ID. Např. {"link"\:"http\://priklad.com/[teamid]","title"\:"odkaz","more"\:false,"newTab"\:true}
 module.SkillColoring.desc=Upravuje zobrazení dovedností.
 module.SkillColoring.skill_color.desc=Obarvení dovedností
 module.SkillColoring.only_skill_color.desc=Obarvovat jen dovednosti a nikoliv osobnost, náladu fanoušků atd.
@@ -363,17 +374,22 @@ module.SupporterStatsEnhancements.desc=Ve statistikách Fanouška zobrazuje hrá
 module.MobileEnhancements.desc=Soubor vylepšení pro mobilní zařízení
 module.MatchOrderInterface.desc=Úpravy formuláře zápasových pokynů
 module.MatchOrderInterface.Specialties.desc=Zobrazovat speciality hráčů
+module.MatchOrderInterface.ShowFaces.desc=V budoucích a starých rozestaveních zobrazuje obličeje hráčů namísto dresů
 module.MatchOrderInterface.StayOnPage.desc=Po uložení zůstat na stránce s pokyny
 module.MatchOrderInterface.SwapPositions.desc=Zobrazot odkaz pro přehození hráčů z levé na pravou stranu
 module.MatchSimulator.desc=Na stránku zápasových pokynů přidává simulátor zápasů
 module.MatchSimulator.RatingsOnTop.desc=Předpověď hodnocení ponechat nahoře
 module.MatchSimulator.RatingsBelow.desc=Předpověď hodnocení zobrazit dole
 module.MatchSimulator.RatingsRight.desc=Předpověď hodnocení zobrazit napravo
+module.MatchSimulator.HTMSPrediction.desc=Přidat HTMS předpovědi
 module.HeaderToggle.desc=Kliknutím na nadpisy druhé úrovně (h2) přepíná viditelnost následujícího oddílu. Pamatuje si poslední nastavení dle jednotlivých stránek a nadpisů
 module.Filter.desc=Do horní části stránky se seznamem hráčů přidává filtry
 module.RatingsDisplay.desc=Průměrná hodnocení ve statistikách zobrazuje v rozsahu 0-20
 module.RatingsDisplay.DenominationsRange.desc=V rozsahu hodnocení 0-20
 module.RatingsDisplay.HatStats.desc=Jako HatStats
+module.RatingsDisplay.HTSums.desc=Jako součet hodnocení Hattricku
+module.SafeForWork.desc=Nahrazuje ikonu a název záložek Hattricku tak, aby vypadaly méně nápadně. Nezapomeň vypnout i další potenciálně nebezpečné moduly, jakými jsou například upozorňující moduly "Alert".
+module.YouthTwins.desc=Ve spolupráci s Hattrick Youthclub zobrazuje počet možných dvojčat tvých dorostenců. Pro použití tohoto modulu nemusíš mít účet na stránkách Hattrick Youthclub. Jelikož je pro rozeznání dvojčat nutná znalost obličejů hráčů, je tato funkce užitečná jen pro Fanoušky.
 #accessability
 
 
@@ -384,21 +400,43 @@ module.RatingsDisplay.HatStats.desc=Jako HatStats
 # IN-GAME STRINGS. translate first
 
 #htev
+HTEVPrediction.away.short=H
+HTEVPrediction.tie.short=R
 
 #transfer-history-filters
 
 #Loyalty display
 
 #Youth-Twins
+YouthTwins.markedTwins=Označen jako dvojče\: %1
+YouthTwins.nonTwins=Označeni jako bez dvojčete\: %1
+YouthTwins.undecidedTwins=Zatím neoznačeni\: %1
+YouthTwins.nonHyUser=Více o jeho potenciálu můžeš zjistit při použití Hattrick Youthclub.
 
 #PlayerStatsExperience
 
 
+PlayerStatsExperience.Experience=Zkušenosti
+PlayerStatsExperience.PerformanceHistory=Historie výkonů
+PlayerStatsExperience.InternationalPercentage=Mezinárodní rodin v %\:
 
+PlayerStatsExperience.matchFriendly=Přáteláky
+PlayerStatsExperience.matchInternationalFriendly=Mezinárodní
+PlayerStatsExperience.matchNationalFriendly=Tuzemský
+PlayerStatsExperience.matchCup=Pohár
+PlayerStatsExperience.matchQualification=Kvalifikace
+PlayerStatsExperience.matchLeague=Liga
+PlayerStatsExperience.matchNtFriendly=Přáteláky NT
+PlayerStatsExperience.matchMasters=Hattrick Masters
+PlayerStatsExperience.matchNtLeague=Mistrovství světa
+PlayerStatsExperience.matchNtFinals=(Semi)finále mistrovství světa
 
 #Series statistics
+rating.average=Průměrné hodnocení
 
 #Save for work
+SafeForWork.title=Nadpis
+SafeForWork.icon=Ikona
 
 #Extrashortcuts
 ExtraShortcuts.statistics=Statistiky
@@ -428,6 +466,12 @@ YouthPromotes.today=Hráč již může být přeřazen\!
 #teamstats+filters
 TeamStats.boxheader=Přehled o týmu
 TeamStats.General=Obecný
+TeamStats.Attributes=Atributy
+TeamStats.Skills=Dovednosti
+TeamStats.Players=Hráči
+TeamStats.Total=Celkem
+TeamStats.Selected=Vybraní
+TeamStats.Average=Průměr
 TeamStats.PlayerNotToOld=Hráči do 19 let
 TeamStats.PlayerToOld=Hráči nad 19 let
 TeamStats.Cards=Karty
@@ -481,6 +525,7 @@ ExtraPlayerInfo.defensiveTrainer=%s trenér, který je defenzivního zaměření
 ExtraPlayerInfo.offensiveTrainer=%s trenér, který je milovník útočné hry.
 ExtraPlayerInfo.balancedTrainer=%s trenér, který je neutrální typ.
 ManagerButtons.writeInGuestbook=Zobraz návštěvní knihu
+LineupShortcut.lineup=Rozestavení
 ShowFriendlyBooked.ShowFriendlies=Zobrazit přátelské zápasy
 
 #Transfer prices
@@ -552,6 +597,7 @@ Filters.ok=Ok
 Filters.clear=Vymazat
 Filters.noFilter=Žádný filtr
 Filters.none=Žádný
+Filters.Attributes=Filtry atributů
 Filters.days=Dny
 Filters.tsi=TSI
 Filters.stamina=Kondice
@@ -561,6 +607,10 @@ Filters.specialty=Specialita
 Filters.stars=Hvězdy
 Filters.minimum=Alespoň
 Filters.maximum=Nejvýše
+Filters.over=Přes
+Filters.under=Pod
+Filters.equal=Rovná se
+Filters.notEqual=Nerovná se
 
 
 match.type.league=Liga
@@ -579,11 +629,22 @@ matchOrder.noMatchSelected=Nevybrány žádné zápasy
 matchOrder.comparedTo=Porovnat s\:
 matchOrder.previousPrediction=Předchozí předpověď
 matchOrder.AddMatchManually=Zápas přidat ručně
-matchOrder.swapPositions=Vyměnit pozice
+matchOrder.swapPositions=Vyměnit strany
 matchOrder.options=Možnosti
 matchOrder.staminaDiscount=Vliv kondice
-matchOrder.staminaDiscount.title=Hodnocení v jednotlivých oblastech jsou snížena podle příspěvku hráčů v daných oblastech
+matchOrder.staminaDiscount.title=Hodnocení v jednotlivých oblastech jsou ovlivněna podle příspěvku hráčů v daných oblastech
+matchOrder.attVsDef=Útok vs. obrana
+matchOrder.attVsDef.title=Zobrazit hodnocení soupeře jako útok vs. obrana nebo jako útok vs. útok
 matchOrder.summary=Souhrn
+matchOrder.tournamentMatch=Turnaj
+matchOrder.cloneOrder=Zduplikovat tento příkaz
+matchOrder.cloneOrder.abbr=D
+matchOrder.cloneAsSub=Duplikovat a přeměnit na střídání
+matchOrder.cloneAsSub.abbr=S
+matchOrder.cloneAsSwap=Duplikovat a přeměnit na výměnu
+matchOrder.cloneAsSwap.abbr=V
+matchOrder.cloneAsChange=Duplikovat a přeměnit na změnu pokynů
+matchOrder.cloneAsChange.abbr=P
 
 #Skills
 Playmaking=Tvorba hry
@@ -665,7 +726,7 @@ SkillTable.switchView=Změnit vzhled
 SkillTable.addHomegrown=Přidat odchovance
 SkillTable.showTimeInClub=Zobrazit dobu v klubu
 SkillTable.switchView.title=Změnit rozložení tabulky.
-SkillTable.addHomegrown.title=Přidat všechny odchovance
+SkillTable.addHomegrown.title=Přidat všechny odchovance ze současného A týmu
 SkillTable.showTimeInClub.title=Zobrazit dobu, po kterou je hráč součástí hlavního týmu
 PlayerNumber=Číslo dresu
 PlayerNumber.abbr=\#
@@ -706,7 +767,7 @@ Last_stars=Hvězdičky v posledním zápase
 Last_stars.abbr=Hv
 Last_stars_EndOfGame=Hvězdičky na konci posledního zápasu
 Last_stars_EndOfGame.abbr=Hv
-Last_stars_decline=Ztráta hvězdiček v posledním zápase
+Last_stars_decline=Hnědé hvězdičky v posledním zápase
 Last_stars_decline.abbr=Rozdíl
 Last_position=Poslední pozice
 Last_position.abbr=Poz
@@ -766,8 +827,8 @@ CurrentBidder.abbr=Zájemce
 CurrentBidderShort=Tým s nejvyšší nabídkou
 CurrentBidderShort.abbr=Záj
 
-skilltable.youthplayer=odchovanec
-skilltable.rebought_youthplayer=znovukoupený odchovanec
+skilltable.youthplayer=Odchovanec
+skilltable.rebought_youthplayer=Znovukoupený odchovanec
 
 #confirms
 ConfirmActions.bid=Opravdu chceš za tohoto hráče nabídnout %s?
@@ -794,7 +855,7 @@ links.custom.helptext2=Své vlastní odkazy můžete také exportovat a sdílet 
 #following string uses pluralForms
 notify.newMail=Máš %s nových zpráv.
 #following string uses pluralForms
-notify.newForumMessage=Na konferenci je %s tobě určených příspěvků.
+notify.newForumMessage=Na konferenci je %s tobě určený příspěvek.;Na konferenci je %s tobě určených příspěvků.
 
 # Context menu items
 # This would look like: Copy player ID: 123456789
@@ -832,6 +893,9 @@ copy.fixturesSource.copied=Zdrojový kód seznamu zápasů byl zkopírován
 
 #matches
 matches.income=Příjem\:
+matches.playedHome=Hráno doma
+matches.playedAway=Hráno venku
+matches.playedHomeAway=Hráno doma a venku
 
 matches.attackdefensebars=Grafy útoků a obran
 matches.right=P
@@ -890,6 +954,7 @@ NextMatch=Další zápas
 AddNextMatch=Přidat další zápas
 LastLineup=Poslední sestava
 YouthMatches=Zápasy dorostu
+Tournaments=Turnaje
 more=více...
 less=méně...
 
@@ -1017,6 +1082,7 @@ button.copy=Kopírovat
 button.up=Nahoru
 button.down=Dolů
 button.goto=Přejít na %s
+button.play=Přehrát
 
 
 status.loading=Načítání…
@@ -1062,6 +1128,10 @@ TeamPopupLinks.OpenNewTab=Otevřít v nové záložce
 
 #toolbar
 toolbar.title=FoxTrick
+toolbar.disableTemporary=Dočasně vypnout
+toolbar.featureHighlight=Zvýraznit možnosti
+toolbar.translationKeys=Zobrazit názvy přeložených řetězců
+toolbar.preferences=Nastavení
 status.active=aktivní
 status.enabled=zapnuto, ale na %s neaktivní
 status.disabled=dočasně vypnuto
@@ -1090,6 +1160,7 @@ tab.alert=Upozornění
 tab.about=O rozšíření
 tab.changes=Změny
 tab.help=Nápověda
+tab.accessibility=Přístupnost
 
 prefs.setup=Nastavení
 prefs.setup.desc=Toto jsou nastavení, která FoxTrick detekoval. Pokud nejsou správná, {napiš nám} o tom.
@@ -1097,7 +1168,7 @@ prefs.setup.locale=Jazyk
 prefs.setup.dateFormat=Formát data
 prefs.setup.country=Země
 
-prefs.storedData.title=Nastavení FoxTricku
+prefs.storedData.title=Uložená nastavení
 prefs.storedData.restoreDefault=Obnovit původní nastavení (jen předvolby, bez osobních nastavení)
 prefs.storedData.oauth.delete=Smazat OAuth token/klíč pro vybraný tým
 # NOTE - please preserve the braces, inner content will be converted to link
@@ -1111,16 +1182,19 @@ prefs.disable.stage=Vypnout na serveru Stage
 
 prefs.loadSave.title=Exportovat/importovat nastavení
 prefs.loadSave.export=Exportovat nastavení a vlastní nastavení
-prefs.loadSave.export.prefs=Exportovat nastavení
+prefs.loadSave.export.prefs=Nastavení
 prefs.loadSave.export.notes=Vlastní nastavení (poznámky, šablony, vlastní odkazy a přestupové filtry)
 prefs.loadSave.export.token=OAuth token/secret
-prefs.loadSave.export.notice=Zkopírovat obsah v textové oblasti a uložit jej jako soubor pro případ budoucího importu nastavení
+prefs.loadSave.export.notice=Zkopírovat obsah v textové oblasti a uložit jej jako soubor pro případ budoucího importu nastavení.
 prefs.loadSave.import=Importovat nastavení (současné nastavení bude přepsáno)
 prefs.loadSave.import.notice=Pro import nastavení vlož uložená nastavení do textové oblasti a stiskni "Importovat"
 
-prefs.additional.title=Další možnosti
-prefs.additional.xmlLoad=Nahrát XML soubory z Hattricku pro dodatečné informace
-prefs.additional.smallCopyIcons=Místo odděleného postranního panelu zobrazovat ikonky v záhlaví
+prefs.additional.title=Obecná nastavení
+prefs.additional.xmlLoad=Nahrát XML soubory pro dodatečné informace z Hattricku
+prefs.additional.smallCopyIcons=Zobrazovat ikonky v záhlaví místo v postranním panelu
+prefs.additional.anstoss2Icons=Pro speciality použít ikony Anstoss2
+prefs.additional.featureHighlight=Zvýraznit prvky FoxTricku
+prefs.additional.translationKeys=Místo přeložených řetězců zobrazovat jejich názvy
 prefs.additional.HTMLDebugLog=V patičce stránek Hattricku (pro vývojáře) zobrazovat log FoxTricku (pro debugging)
 
 prefs.feedback.saved=Nastavení uloženo\!
@@ -1139,7 +1213,9 @@ link.nightlySafari=Vývojové verze pro Safari
 link.recentChanges=Poslední změny
 
 releaseNotes.show=Po aktualizaci FoxTricku zobrazit poznámky k vydání
-releaseNotes.showFor=Zobrazit poznámky k verzi pro\:
+releaseNotes.showFor=Zobrazit poznámky k verzi\:
+releaseNotes.version=Verze\:
+releaseNotes.translationStatus=Tvůj jazyk je přeložen z %s%.
 
 about.copyright=Copyright
 about.maintainers=Údržbáři
@@ -1151,6 +1227,7 @@ prefs.restoreDefault.ask=Opravdu chceš obnovit původní nastavení FoxTricku?
 prefs.deleteToken.ask=Smazat OAuth token/klíč pro tým s ID %s?
 prefs.disableAllModules.ask=Opravdu chceš vypnout všechny moduly Foxtricku?
 prefs.revokePermissions.ask=Opravdu chceš zrušit všechna doplňková oprávnění?
+prefs.needPermissions=Jsou aktivovány funkce, které pro svou práci vyžadují dodatečná oprávnění. Ulož nastavení a v následujícím dialogu umožni nebo zamítni přístup. Zmíněné funkce jsou\:
 
 ###EOF
 
