*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.10.0@9997 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/pt-BR/foxtrick.properties
+++ b/content/locale/pt-BR/foxtrick.properties
@@ -432,6 +432,7 @@ seasonstats.cup=Copa
 seasonstats.masters=Masters
 
 #Newsfeed filter
+LeagueNewsFilter.label=Filtrar Ultimos Eventos\:
 LeagueNewsFilter.all=Todos
 LeagueNewsFilter.friendlies=Amistosos & treinadores alterados
 LeagueNewsFilter.transfers=Transferências
