*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.10.0@10009 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/pt-BR/foxtrick.properties
+++ b/content/locale/pt-BR/foxtrick.properties
@@ -119,9 +119,16 @@ module.OriginalFace.HideInjury.desc=Mostra o rosto normal dos jogadores lesionad
 module.OriginalFace.HideSuspended.desc=Mostra o rosto normal de jogadores suspensos
 module.OriginalFace.ColouredYouth.desc=Mostra o rosto de jogadores da academia com cores
 module.ConfirmActions.desc=Pedir confirmação antes de determinadas ações
+module.ConfirmActions.Bid.desc=Dando um lance em um jogador
+module.ConfirmActions.TransferList.desc=Colocando um jogador na lista de transferência
+module.ConfirmActions.NtChange.desc=(Des)Convocando um jogador da seleção nacional
+module.ConfirmActions.StaffChange.desc=Contratando/demitindo especialistas
 module.PersonalityImages.desc=Adicionar numeros coloridos para popularidade, honestidade e agressividade a pagina do jogador
 module.HideSignatures.desc=Esconder as assinaturas nos foruns, e em alternativa mostrar um link para as mesmas
+module.MarkUnread.desc=Adiciona um link para marcar todas as postagens como não lidas a partir do atual
 module.ForumNextAndPrevious.desc=Remover os botoes 'Proximo' e 'Anterior' dos foruns, se estes estiverem desabilitados
+module.ForumLastPost.desc=Ir para a última postagem em vez de ir para a primeira ao ler um tópico
+module.ForumLastPost.lastpage.desc=Ir para a última página, não para a última postagem
 module.MatchPlayerColouring.desc=Cores dos jogadores em funçao da sua equipa no relatorio de jogo.
 module.HTThreadMarker.desc=Marcar Tópicos criados por HTs
 module.TeamStats.General.desc=Informações gerais (TSI/idade)
@@ -132,7 +139,10 @@ module.TeamStats.Attributes.desc=Atributos
 module.TeamStats.Skills.desc=Habilidades
 module.TeamStats.Match.desc=Partida
 module.TeamStats.Current_league.desc=Liga atual
+module.ExtraPlayerInfo.CoachInfo.desc=Mostra informações sobre o(s) antigo(s) e o atual Auxiliar Técnico.
+module.ExtraPlayerInfo.Flag.desc=Mostrar as nacionalidades dos jogadores como bandeiras dos países de origem.
 module.CopyPlayerAd.desc=Um botão na página do jogador para copiar seus detalhes (em HT-ML).
+module.CopyPlayerAd.Sorted.desc=Organizar as habilidades em ordem decrescente.
 module.CustomMedals.desc=Trocar os novos trofeus do Hattrick pelos antigos
 module.SeniorTeamShortCuts.desc=Adicionar links Técnico e Ultima formação na Equipe Principal
 module.SeniorTeamShortCuts.OnlyOtherPages.desc=Mostrar somente nas paginas de outros times
@@ -147,6 +157,8 @@ module.ExtendedPlayerDetails.D.desc=Mostrar a duração do contrato em dias
 module.ExtendedPlayerDetailsWage.WageWithoutBonus.desc=Exibe salário sem bônus
 module.FixcssProblems.desc=Arrumar alguns problemas com estilos CSS do HT
 module.FixcssProblems.Club_Menu_Teamnames.desc=Arrumar o cortar nomes longos no menua da esquerda
+module.FixcssProblems.HideInvitation.desc=Ocultar a opção "convidar" visível na parte inferior do submenu
+module.FixcssProblems.RTL_Fixes.desc=Corrige alguns erros do HT em idiomas de escrita da direita para a esquerda
 module.SimplePresentation.desc=Opções de apresentação adicionais
 module.SimplePresentation.League_Table.desc=Adiciona linhas verticais à tabela de classificação para facilitar a leitura
 module.SimplePresentation.Guestbook.desc=Facilita a leitura no livro de visitas (mensagens com fundo cinza)
@@ -171,6 +183,9 @@ module.ExtraShortcuts.Prefs.desc=Link para a página de preferências HT
 module.ExtraShortcuts.ManageCHPP.desc=Link para a página de preferências CHPP
 module.ExtraShortcuts.FoxTrickPrefs.desc=Link para a página de preferências do FoxTrick
 module.ExtraShortcuts.HtRadio.desc=HtRadio
+module.ExtraShortcuts.No9.desc=No9 Radio
+module.ExtraShortcuts.Latehome.desc=Rádio Latehome
+module.ExtraShortcuts.Downtime.desc=Rádio Downtime
 #CopyMatchID
 module.HeaderFix.desc=Fixa o cabeçalho durante a rolagem (afeta também em outras páginas do HT)
 module.HeaderFix.FixLeft.desc=Também fixa o submenu ao rolar
@@ -378,6 +393,7 @@ HistoryStats.league.short=Sér.
 HistoryStats.finalPosition=Posição final no grupo
 HistoryStats.finalPosition.short=P
 HistoryStats.cupwinner=Vencedor da copa
+HistoryStats.cupwinner.short=CC
 
 # YouthPromotes
 #following string uses pluralForms
