*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.10.0@10023 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -58,6 +58,7 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=Egyedi eltolási értéket haszná
 module.StaffMarker.desc=Kiemeli a HT-stábtagok nickneveit a fórumokon és a csapatoldalakon.
 module.StaffMarker.manager.desc=Kiemeli a HT-stábtagok nickneveit a csapatoldalakon.
 module.StaffMarker.own.desc=Személyes jelölők (saját felhasználói azonosítót tartalmazó formátum)\: userId\=1000 userId\=1001 stílus\='color\:yellow \!fontos;' userId\=1002 stílus\='background-color\:yellow;)
+module.StaffMarker.external.desc=Egyéb CHPP alkalmazások fejlesztőinek megjelölése
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Megjelenít egy hivatkozássávot az ifiakadémiához (levelek, sajtónyilatkozatok, vendégkönyvek és hirdetések esetén is működik)
 module.ForumYouthIcons.q.desc=Ikont ad az idézést jelölő címkéhez, ha addig nem volt
@@ -375,6 +376,8 @@ module.ShowLineupSet.Winning.desc=Győztes csapatok kiemelése
 module.SupporterStatsEnhancements.desc=A jelenlegi játékosok kiemelése a támogatói statisztikák oldalon
 module.MobileEnhancements.desc=Mobil eszköz fejlesztések beállítása
 module.MatchOrderInterface.desc=Trükkök a mérkőzésbeállító felületen.
+module.MatchOrderInterface.GotTrainingOnField.desc=Azon játékosok megjelölése a felállás-szerkesztőben, akik már kaptak edzést (csak támogatók részére)
+module.MatchOrderInterface.AutoExpandCloned.desc=Másolt utasítások automatikus megnyitása
 module.MatchOrderInterface.Specialties.desc=Játékosok specialitásának megjelenítése
 module.MatchOrderInterface.ShowFaces.desc=A régi és elkövetkező mérkőzések felállásainál a játékos arcképe helyett a mezt mutatja
 module.MatchOrderInterface.StayOnPage.desc=Maradjon a mérkőzésbeállító felületen a mentés után
@@ -393,11 +396,14 @@ module.RatingsDisplay.HTSums.desc=Hattrick értékelések összegeként
 module.SafeForWork.desc=A Hattrick oldal ikonját és címét egy kevésbé gyanús kinézetre cseréli. Bizonyosodj meg róla, hogy egyéb kockázatos modul is kikapcsoltál, mint pl. a "Figyelmeztetések" modulokat.
 module.PlayerStatsExperience.desc=Tapasztalat töredékszintjének megjelenítése a Legutóbbi teljesítmények oldalon
 module.YouthTwins.desc=A hattrick youthclub-bal együttműködve megjeleníti az ifijátékosaid lehetséges ikerpárjait. Nincs szükséged hattrick youthclub hozzáféréshez ehhez a modulhoz. Mivel az ikrek azonosításához elengedhetetlen a játékosok arcképének ismerete, ezért a funkció csak támogatók részére hasznos.
+module.YouthTwins.HideInfoLink.desc=Információs link letiltása az újoncoknál
+module.FriendlyPool.desc=Látogatott országok színezése a barátságos kalapban
 #accessability
 
 module.TransferHistoryFilters.desc=Szűrők hozzáadása az átigazolási archívumhoz 
 
 #htevprediction
+module.HTEVPrediction.desc=HTEV odds-ok megjelenítése a bajnoki mérkőzéseknél\: http\://htev.org (by furr_)
 # -----------------------------------------------------------------------------
 
 
@@ -407,6 +413,7 @@ module.TransferHistoryFilters.desc=Szűrők hozzáadása az átigazolási archí
 HTEVPrediction.home.short=H
 HTEVPrediction.away.short=I
 HTEVPrediction.tie.short=D
+HTEVPrediction.visitLeague=Bajnokság oldala a http\://www.htev.org-on
 
 #transfer-history-filters
 TransferHistoryFilters.all=Összes
@@ -424,6 +431,7 @@ YouthTwins.markedTwins=Megjelölve, mint iker\: %1
 YouthTwins.nonTwins=Megjelölve, mint nem iker\: %1
 YouthTwins.undecidedTwins=Még nincs megjelölve\: %1
 YouthTwins.nonHyUser=Többet tudhatsz meg a maximális képességeiről, ha használod a hattrick youthclub-ot.
+YouthTwins.infoText=Mik azok az ikrek és hogyan származhat előnyöm ebből?
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=28 tapasztalati pontból már %1 és %2 közötti pontot gyűjtött. A tapasztalati szintje %3 és %4 között áll.
@@ -434,6 +442,7 @@ PlayerStatsExperience.ExperienceChange.title.abbr=TAP+
 PlayerStatsExperience.Walkover=Játék nélküli győzelem, ezért a játékosok nem kaptak tapasztalatot.
 
 
+PlayerStatsExperience.MatchesSinceSkilup=Mérkőzések az utolsó szintlépés óta
 PlayerStatsExperience.matches=Mérkőzések
 PlayerStatsExperience.minutes=Perc
 PlayerStatsExperience.minXPpts=Min. XP pont
@@ -668,9 +677,13 @@ matchOrder.home=Hazai
 matchOrder.home.abbr=H
 matchOrder.away=Idegenben
 matchOrder.away.abbr=I
+matchOrder.cloneOrder=Utasítás másolása
 matchOrder.cloneOrder.abbr=U
+matchOrder.cloneAsSub=Másolás és átalakítás cserére
 matchOrder.cloneAsSub.abbr=Cs
+matchOrder.cloneAsSwap=Másolás és átalakítás posztcserére
 matchOrder.cloneAsSwap.abbr=Pcs
+matchOrder.cloneAsChange=Másolás és átalakítás utasítás változtatásra
 matchOrder.cloneAsChange.abbr=I
 
 #Skills
@@ -1187,6 +1200,7 @@ tab.alert=Figyelmeztetések
 tab.about=Névjegy
 tab.changes=Módosítások
 tab.help=Súgó
+tab.accessibility=Könnyű kezelés
 
 prefs.setup=Beállítás
 prefs.setup.desc=Ezeket a beállításokat észlelte nálad a Foxtrick. Ha hibásak, {kérlek jelentsd}.
